--- a/ToyRenderer.vcxproj
+++ b/ToyRenderer.vcxproj
@@ -152,19 +152,19 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Bounds.cpp" />
-    <ClCompile Include="src\Color.cpp" />
+    <ClCompile Include="src\maths\Color.cpp" />
     <ClCompile Include="src\Components\Component.cpp" />
     <ClCompile Include="src\IndexBuffer.cpp" />
     <ClCompile Include="src\InputMaster.cpp" />
-    <ClCompile Include="src\Material.cpp" />
+    <ClCompile Include="src\rendering\Material.cpp" />
     <ClCompile Include="src\maths\Matrix4x4.cpp" />
     <ClCompile Include="src\maths\Vector2.cpp" />
     <ClCompile Include="src\maths\Vector3.cpp" />
     <ClCompile Include="src\maths\Vector4.cpp" />
-    <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\rendering\Mesh\Mesh.cpp" />
     <ClCompile Include="src\MeshLoader.cpp" />
     <ClCompile Include="src\RawMesh.cpp" />
-    <ClCompile Include="src\Renderer.cpp" />
+    <ClCompile Include="src\rendering\Renderer.cpp" />
     <ClCompile Include="src\ResourceManager.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\Tests\Test.cpp" />
@@ -321,20 +321,20 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Bounds.h" />
-    <ClInclude Include="src\Color.h" />
+    <ClInclude Include="src\maths\Color.h" />
     <ClInclude Include="src\Components\Component.h" />
     <ClInclude Include="src\IndexBuffer.h" />
     <ClInclude Include="src\InputMapping.h" />
     <ClInclude Include="src\InputMaster.h" />
-    <ClInclude Include="src\Material.h" />
+    <ClInclude Include="src\rendering\Material.h" />
     <ClInclude Include="src\maths\Matrix4x4.h" />
     <ClInclude Include="src\maths\Vector2.h" />
     <ClInclude Include="src\maths\Vector3.h" />
     <ClInclude Include="src\maths\Vector4.h" />
-    <ClInclude Include="src\Mesh.h" />
+    <ClInclude Include="src\rendering\Mesh\Mesh.h" />
     <ClInclude Include="src\MeshLoader.h" />
     <ClInclude Include="src\RawMesh.h" />
-    <ClInclude Include="src\Renderer.h" />
+    <ClInclude Include="src\rendering\Renderer.h" />
     <ClInclude Include="src\ResourceManager.h" />
     <ClInclude Include="src\Settings.h" />
     <ClInclude Include="src\Shader.h" />
