--- a/ToyRenderer.vcxproj
+++ b/ToyRenderer.vcxproj
@@ -152,6 +152,7 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Bounds.cpp" />
+    <ClCompile Include="src\Components\Camera.cpp" />
     <ClCompile Include="src\Components\Scripts\MoveCamera.cpp" />
     <ClCompile Include="src\Components\Transform.cpp" />
     <ClCompile Include="src\maths\Color.cpp" />
@@ -326,6 +327,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Bounds.h" />
+    <ClInclude Include="src\Components\Camera.h" />
     <ClInclude Include="src\Components\Scripts\MoveCamera.h" />
     <ClInclude Include="src\Components\Scripts\Script.h" />
     <ClInclude Include="src\Components\Transform.h" />
