starte adding frame buffer, added texture settings and broken mip mapping

--- a/ToyRenderer.vcxproj
+++ b/ToyRenderer.vcxproj
@@ -337,6 +337,7 @@
     <ClInclude Include="src\Components\Transform.h" />
     <ClInclude Include="src\maths\Color.h" />
     <ClInclude Include="src\Components\Component.h" />
+    <ClInclude Include="src\rendering\FrameBuffer.h" />
     <ClInclude Include="src\rendering\IndexBuffer.h" />
     <ClInclude Include="src\managers\input\InputMapping.h" />
     <ClInclude Include="src\managers\input\InputMaster.h" />
