--- a/ToyRenderer.vcxproj
+++ b/ToyRenderer.vcxproj
@@ -151,6 +151,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\Components\Scripts\postProcesses\Vignetting.cpp" />
     <ClCompile Include="src\log\Log.cpp" />
     <ClCompile Include="src\rendering\Bounds.cpp" />
     <ClCompile Include="src\Components\Camera.cpp" />
@@ -197,6 +198,7 @@
   <ItemGroup>
     <None Include="res\shaders\groundGrid.shader" />
     <None Include="res\shaders\postProcess_PassThrough.shader" />
+    <None Include="res\shaders\postProcess_Vignetting.shader" />
     <None Include="res\shaders\procceduralSkybox.shader" />
     <None Include="res\shaders\unlit_texture.shader" />
     <None Include="src\vendor\glm\detail\func_common.inl" />
@@ -335,6 +337,7 @@
     <None Include="src\vendor\glm\gtx\wrap.inl" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Components\Scripts\postProcesses\Vignetting.h" />
     <ClInclude Include="src\log\Log.h" />
     <ClInclude Include="src\rendering\Bounds.h" />
     <ClInclude Include="src\Components\Camera.h" />
