--- a/ToyRenderer.vcxproj.filters
+++ b/ToyRenderer.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClCompile Include="src\rendering\RHI\RHI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Components\Scripts\postProcesses\Vignetting.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\vendor\stb_image\stb_image.h">
@@ -1037,6 +1040,9 @@
     <ClInclude Include="src\log\Log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Components\Scripts\postProcesses\Vignetting.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\vendor\glm\detail\func_common.inl">
@@ -1447,6 +1453,7 @@
     </None>
     <None Include="res\shaders\unlit_texture.shader" />
     <None Include="res\shaders\postProcess_PassThrough.shader" />
+    <None Include="res\shaders\postProcess_Vignetting.shader" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\checkerFormat.png">
