first test with dll and sandbox

--- a/ToyRenderer/ToyRenderer.vcxproj.filters
+++ b/ToyRenderer/ToyRenderer.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClCompile Include="src\world\Time.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\testdll.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\vendor\stb_image\stb_image.h">
@@ -1047,6 +1050,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\world\Time.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\testdll.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
